; ModuleID = '/home/carl/AnghaBench/lab/engine/code/bspc/extr_brushbsp.c_AddNodeToStack.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/bspc/extr_brushbsp.c_AddNodeToStack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_5__* }

@firstnode = common dso_local global %struct.TYPE_5__* null, align 8
@lastnode = common dso_local global %struct.TYPE_5__* null, align 8
@nodelistsize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AddNodeToStack(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = call i32 (...) @ThreadLock()
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** @firstnode, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  store %struct.TYPE_5__* %4, %struct.TYPE_5__** %6, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  store %struct.TYPE_5__* %7, %struct.TYPE_5__** @firstnode, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** @lastnode, align 8
  %9 = icmp ne %struct.TYPE_5__* %8, null
  br i1 %9, label %12, label %10

10:                                               ; preds = %1
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** @lastnode, align 8
  br label %12

12:                                               ; preds = %10, %1
  %13 = load i32, i32* @nodelistsize, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* @nodelistsize, align 4
  %15 = call i32 (...) @ThreadUnlock()
  %16 = call i32 @ThreadSemaphoreIncrease(i32 1)
  ret void
}

declare dso_local i32 @ThreadLock(...) #1

declare dso_local i32 @ThreadUnlock(...) #1

declare dso_local i32 @ThreadSemaphoreIncrease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
